Closing #3145: * apply a patch by hamish (as part of GCI) that lets fseek() discard   characters pushed onto the stream via ungetc()

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40055 a95241bf-73f2-0310-859d-f6bbb57e9c96